--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,15 +10,24 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
-         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/about" | relative_url }}">Miraahs Paper</a>
+          <a class="nav-link" href="{{ "/2025/05/22/Augmented-reality" | relative_url }}">AR</a>
+        <li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ "/2025/05/17/VR" | relative_url }}">VR</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/contact" | relative_url }}">Benjamins Paper</a>
+          <a class="nav-link" href="{{"/2025/05/22/Mixed" | relative_url }}">Mixed</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/2025/05/22/game" | relative_url }}">GAME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/about" | relative_url }}">Miraah's Paper</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/contact" | relative_url }}">Benjamin's Paper</a>
         </li>
       </ul>
     </div>
