updated the content

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,22 +12,13 @@
           <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/2025/05/22/Augmented-reality" | relative_url }}">AR</a>
+          <a class="nav-link" href="{{ "/2025/05/17/VR" | relative_url }}">Meta-Analysis</a>
         <li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ "/2025/05/17/VR" | relative_url }}">VR</a>
+            <a class="nav-link" href="{{ "/2025/05/22/Miraah" | relative_url }}">Miraah's Paper</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/2025/05/22/Mixed" | relative_url }}">Mixed</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{"/2025/05/22/game" | relative_url }}">GAME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{"/about" | relative_url }}">Miraah's Paper</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{"/contact" | relative_url }}">Benjamin's Paper</a>
+          <a class="nav-link" href="{{"/2025/05/22/Ben" | relative_url }}">Ben's Paper</a>
         </li>
       </ul>
     </div>
